implemented SyncResponse dto; refactored SyncRequest and business logic in VoteServiceImpl